# CarNumberFilter

./: CMakeLists.txt  readMe
src/: main.cpp  main_widget.cpp  main_widget.h  number_generator.cpp  number_generator.h
